[gd_scene load_steps=8 format=3 uid="uid://bnxtriql3dtjs"]

[ext_resource type="Script" path="res://control.gd" id="1_iljgf"]
[ext_resource type="Texture2D" uid="uid://dasc1bfden3la" path="res://art/House Icon_1.png" id="2_m8j6r"]
[ext_resource type="Script" path="res://upgrade_1.gd" id="3_osnlu"]
[ext_resource type="Texture2D" uid="uid://cxec1umiqk22w" path="res://art/USF.png" id="4_1eb6v"]
[ext_resource type="Script" path="res://upgrade_2.gd" id="5_e7o2n"]
[ext_resource type="Script" path="res://upgrade_3.gd" id="6_2juji"]
[ext_resource type="Script" path="res://upgrade_4.gd" id="7_x0r2j"]

[node name="control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iljgf")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="money_s" type="Label" parent="."]
layout_mode = 2
offset_left = 29.0
offset_top = 179.0
offset_right = 249.0
offset_bottom = 205.0
text = "Money /s"

[node name="customer_s" type="Label" parent="."]
layout_mode = 2
offset_left = 363.0
offset_top = 179.0
offset_right = 571.0
offset_bottom = 205.0
text = "Customers /S"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="clicker" type="Button" parent="MarginContainer/Control"]
z_index = 3
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.5
offset_right = 123.0
offset_bottom = 15.5
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "*Click me*"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control"]
layout_mode = 0
offset_left = 755.0
offset_top = 65.0
offset_right = 1094.0
offset_bottom = 584.0
theme_override_constants/separation = 10

[node name="upgrade_1" type="Button" parent="MarginContainer/Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Airbnb"
icon = ExtResource("2_m8j6r")
alignment = 0
script = ExtResource("3_osnlu")

[node name="cost" type="Button" parent="MarginContainer/Control/VBoxContainer/upgrade_1"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -35.0
grow_horizontal = 0
grow_vertical = 0
button_mask = 0
text = "N/A"
icon = ExtResource("4_1eb6v")
flat = true

[node name="amount" type="Label" parent="MarginContainer/Control/VBoxContainer/upgrade_1"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
text = "N/A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="upgrade_2" type="Button" parent="MarginContainer/Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Small Motel"
icon = ExtResource("2_m8j6r")
alignment = 0
script = ExtResource("5_e7o2n")

[node name="cost" type="Button" parent="MarginContainer/Control/VBoxContainer/upgrade_2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -35.0
grow_horizontal = 0
grow_vertical = 0
button_mask = 0
text = "N/A"
icon = ExtResource("4_1eb6v")
flat = true

[node name="amount" type="Label" parent="MarginContainer/Control/VBoxContainer/upgrade_2"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
text = "N/A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="upgrade_3" type="Button" parent="MarginContainer/Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Hostel"
icon = ExtResource("2_m8j6r")
alignment = 0
script = ExtResource("6_2juji")

[node name="cost" type="Button" parent="MarginContainer/Control/VBoxContainer/upgrade_3"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -35.0
grow_horizontal = 0
grow_vertical = 0
button_mask = 0
text = "N/A"
icon = ExtResource("4_1eb6v")
flat = true

[node name="amount" type="Label" parent="MarginContainer/Control/VBoxContainer/upgrade_3"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
text = "N/A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="upgrade_4" type="Button" parent="MarginContainer/Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Vacation Complex"
icon = ExtResource("2_m8j6r")
alignment = 0
script = ExtResource("7_x0r2j")

[node name="cost" type="Button" parent="MarginContainer/Control/VBoxContainer/upgrade_4"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -35.0
grow_horizontal = 0
grow_vertical = 0
button_mask = 0
text = "N/A"
icon = ExtResource("4_1eb6v")
flat = true

[node name="amount" type="Label" parent="MarginContainer/Control/VBoxContainer/upgrade_4"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
text = "N/A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="money" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "Money:"

[node name="customer" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "Customers:"

[node name="Upgrade" type="Node2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="MarginContainer/Control/clicker" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/upgrade_1" to="MarginContainer/Control/VBoxContainer/upgrade_1" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/upgrade_2" to="MarginContainer/Control/VBoxContainer/upgrade_2" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/upgrade_3" to="MarginContainer/Control/VBoxContainer/upgrade_3" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/upgrade_4" to="MarginContainer/Control/VBoxContainer/upgrade_4" method="_on_pressed"]
